crates/tui/tests/storybook/snapshots/app_dialog_command::ask_user_question_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 384
expression: frame.text()
---











─ Auth method ──────────────────────────────────────────────────────────────────
 Which authentication method should I use?

  1. OAuth
     redirect to provider login
  2. API key
     paste a secret token
  3. Anonymous
     skip auth entirely
 type a custom answer…
 ○ normal                                                                 1:1 0%
