crates/tui/tests/storybook/snapshots/app_dialog_command::ask_user_question_dialog.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 22
 12   0   2 fg=AnsiValue(208)
 12   2  11 fg=AnsiValue(208) attrs=dim
 12  13  67 fg=AnsiValue(208)
 14   0   1 bg=AnsiValue(237)
 14   1   1 fg=Black bg=White
 14   2   3 bg=AnsiValue(237) attrs=dim
 14   5   5 fg=AnsiValue(208) bg=AnsiValue(237)
 14  10  70 bg=AnsiValue(237)
 15   1  30 attrs=dim
 16   1   4 attrs=dim
 17   1  24 attrs=dim
 18   1   4 attrs=dim
 19   1  22 attrs=dim
 20   1  33 attrs=dim
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  64 bg=AnsiValue(233)
 21  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
