crates/tui/tests/storybook/snapshots/app_dialog_command::ask_user_question_dialog_expanded_max_height.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
─ Auth method ──────────────────────────────────────────────────────────────────
 Which authentication method should I use?
  1. OAuth
     redirect to provider login
  2. API key
     paste a secret token
  3. Anonymous
     skip auth entirely
 press tab to add your own answer…












 ○ normal                                                                 1:1 0%
