crates/tui/tests/storybook/snapshots/app_dialog_command::ask_user_question_dialog_expanded_max_height.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 22
  5   0   2 fg=AnsiValue(208)
  5   2  11 fg=AnsiValue(208) attrs=dim
  5  13  67 fg=AnsiValue(208)
  7   0   1 bg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  7   2   3 bg=AnsiValue(237) attrs=dim
  7   5   5 fg=AnsiValue(208) bg=AnsiValue(237)
  7  10  70 bg=AnsiValue(237)
  8   1  30 attrs=dim
  9   1   4 attrs=dim
 10   1  24 attrs=dim
 11   1   4 attrs=dim
 12   1  22 attrs=dim
 13   1  33 attrs=dim
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  64 bg=AnsiValue(233)
 21  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
