crates/tui/tests/storybook/snapshots/app_dialog_command::btw_dialog_with_answer.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 345
expression: frame.styles_text()
---
dim: 70 16
  0   0  69 bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1  68 bg=AnsiValue(236) attrs=bold
  2   0  69 bg=AnsiValue(236)
 11   0   2 fg=AnsiValue(208)
 11   2  48 fg=AnsiValue(208) attrs=dim
 11  50  20 fg=AnsiValue(208)
 12   1   1 fg=Black bg=White
 12   2  15 fg=AnsiValue(208)
 12  69   1 bg=AnsiValue(243)
 13  15  14 fg=AnsiValue(208)
 13  69   1 bg=AnsiValue(235)
 14  24   6 fg=AnsiValue(208)
 14  69   1 bg=AnsiValue(235)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  52 bg=AnsiValue(233)
 15  62   8 fg=AnsiValue(244) bg=AnsiValue(233)
